[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/BTF-Anim-Base-SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 2.4
loop = true
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.3024, 24.0297 )

[sub_resource type="CircleShape2D" id=6]

[node name="Player" type="KinematicBody2D" groups=[
"time_scale_objects",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.57079
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.12537, 0.79343 )
shape = SubResource( 1 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 65.2112, 3.76307 )

[node name="Timers" type="Node" parent="."]

[node name="fireRateNormal" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="fireRateBulletTime" type="Timer" parent="Timers"]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )
anims/Run_BulletTime = SubResource( 4 )

[node name="Torso" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 2147483648

[node name="CollisionShape2D" parent="Torso" index="0"]
position = Vector2( -12.9784, -0.529732 )
shape = SubResource( 5 )

[node name="Head" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Head" index="0"]
position = Vector2( 15.0974, 1.32433 )
shape = SubResource( 6 )
[connection signal="timeout" from="Timers/fireRateNormal" to="." method="_on_fireRate_timeout"]
[connection signal="timeout" from="Timers/fireRateBulletTime" to="." method="_on_fireRateBulletTime_timeout"]
[connection signal="hit" from="Torso" to="." method="_on_Torso_hit"]
[connection signal="hit" from="Head" to="." method="_on_Head_hit"]

[editable path="Torso"]

[editable path="Head"]
